--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: compress
 <body class="body">
 <div class="container">
     <header class="header">
-        <h1 style="font-family:楷体">馨予和跃华<span >记录我们的幸福.</span style="font-family:楷体"></h1>
+        <h1 >馨予和跃华<span style="font-family:楷体">记录我们的幸福.</span style="font-family:楷体"></h1>
         <nav class="links">
             <a href="#"><i class="fa fa-twitter-square fa-3x"></i></a>
             <a href="#"><i class="fa fa-instagram fa-3x"></i></a>
