--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@ layout: compress
     <meta name="description" content="{{ site.description }}"/>
     <meta name="keywords" content="{{ site.keywords }}"/>
     <meta name="author" content="{{ site.author }}"/>
-    <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/normalize.css"/>
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/fonts/font-awesome/css/font-awesome.css"/>
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/body.css"/>
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/card.css"/>
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/pattern.css"/>
+    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
+    <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css"/>
+    <link rel="stylesheet" type="text/css" href="css/modern-blog.css"/>
     <!--[if IE]>
     <script type="text/javascript" src="js/vendors/html5.min.js"></script>
     <![endif]-->
@@ -27,30 +25,35 @@ layout: compress
         }
     </script>
 </head>
-<body class="demo-1">
+<body class="body">
 <div class="container">
-    <header class="codrops-header">
-      <h1>Card Expansion Effect with SVG clipPath <span>Circular clip</span></h1>
-
+    <header class="header">
+        <h1 >馨予和跃华<span style="font-family:楷体">记录我们的幸福.</span style="font-family:楷体"></h1>
+        <nav class="links">
+            <a href="#"><i class="fa fa-twitter-square fa-3x"></i></a>
+            <a href="#"><i class="fa fa-instagram fa-3x"></i></a>
+            <a href="#"><i class="fa fa-facebook-square fa-3x"></i></a>
+            <a href="#"><i class="fa fa-tumblr-square fa-3x"></i></a>
+        </nav>
     </header>
     <div class="content">
         <!-- trianglify pattern container -->
         <div class="pattern pattern--hidden"></div>
         <!-- cards -->
         <div class="wrapper">
-            {% for post in paginator.posts %}
+            {% for post in site.posts %}
             <div class="card" data-id="{{ post.id }}">
                 <div class="card__container card__container--closed">
                     <svg class="card__image" xmlns="http://www.w3.org/2000/svg"
-                         xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1920 500"
+                         xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1920 1200"
                          preserveAspectRatio="xMidYMid slice">
                         <defs>
                             <clipPath id="{{ post.id }}-clip-path">
-                                <circle class="clip" cx="960" cy="250" r="992"></circle>
+                                <polygon class="clip" points="0,1200 0,0 1920,0 1920,1200"></polygon>
                             </clipPath>
                         </defs>
                         <image clip-path="url(#{{ post.id }}-clip-path)" width="1920" height="1200"
-                               xlink:href="{{ site.baseurl }}/{{ post.image }}"></image>
+                               xlink:href="{{ post.image }}"></image>
                     </svg>
                     <div class="card__content">
                         <i class="card__btn-close fa fa-times"></i>
@@ -60,7 +63,7 @@ layout: compress
                         </div>
                         <div class="card__copy">
                             <div class="meta">
-                                <img class="meta__avatar" src="{{ site.baseurl }}/{{ post.avatar }}"/>
+                                <img class="meta__avatar" src="{{ post.avatar }}"/>
                                 <span class="meta__author">{{ post.author }}</span>
                                 <span class="meta__date">{{ post.date | date: "%Y-%m-%d" }}</span>
                             </div>
@@ -71,20 +74,16 @@ layout: compress
             </div>
             {% endfor %}
             <!-- /cards -->
-            {% if paginator.previous_page or paginator.next_page %}
-                {% include pagination.html %}
-            {% endif %}
         </div>
-
     </div>
     <!-- /container -->
 </div>
 <!-- JS -->
-<script src="{{ site.baseurl }}/js/vendors/trianglify.min.js"></script>
-<script src="{{ site.baseurl }}/js/vendors/TweenMax.min.js"></script>
-<script src="{{ site.baseurl }}/js/vendors/ScrollToPlugin.min.js"></script>
-<script src="{{ site.baseurl }}/js/vendors/cash.min.js"></script>
-<script src="{{ site.baseurl }}/js/Card-circle.js"></script>
-<script src="{{ site.baseurl }}/js/modern-blog.js"></script>
+<script src="js/vendors/trianglify.min.js"></script>
+<script src="js/vendors/TweenMax.min.js"></script>
+<script src="js/vendors/ScrollToPlugin.min.js"></script>
+<script src="js/vendors/cash.min.js"></script>
+<script src="js/card-modern-blog.js"></script>
+<script src="js/modern-blog.js"></script>
 </body>
 </html>
