--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 ---
 <section class="mast">
   <header class="mast__header">
-    <h1>Holly Gibney</h1>
-    <span>Freelance Designer and Photographer</span>
+    <h1>Love</h1>
+    <span>记录我们的幸福</span>
   </header>
   <div class="mast__img bg-grey">
     <div class="absolute-bg" style="background-image: url('/assets/images/mast-left.jpg');"></div>
