--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@ layout: default
 ---
 <section class="mast">
   <header class="mast__header">
-    <h1>Love</h1>
+    <h1>Love Forever</h1>
     <span>记录我们的幸福</span>
   </header>
   <div class="mast__img bg-grey">
-    <div class="absolute-bg" style="background-image: url('/assets/images/mast-left.jpg');"></div>
+    <div class="absolute-bg" style="background-image: url('/assets/images/a.jpg');"></div>
   </div>
   <div class="mast__img bg-alpha">
-    <div class="absolute-bg" style="background-image: url('/assets/images/mast-right.jpg');"></div>
+    <div class="absolute-bg" style="background-image: url('/assets/images/love.jpg');"></div>
   </div>
 </section>
 
