--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ layout: default
 
 <section id="about" class="section-padding bg-grey">
   <div class="grid">
-    <h1 class="section-header">About</h1>
+    <h1 class="section-header">关于</h1>
     <div class="about">
-      <p class="about__text wow fadeInUp" data-wow-delay="300ms">Fixie quinoa hot chicken, 8-bit tousled jianbing portland yr truffaut beard. Dreamcatcher ethical brunch authentic kale chips. Hell of raclette tumblr, organic kinfolk locavore occupy gastropub pinterest. Ramps squid la croix, chicharrones gochujang fixie try-hard bitters.</p>
+      <p class="about__text wow fadeInUp" data-wow-delay="300ms">正在记录。。。。</p>
     </div>
     <div id="instafetch" class="container-triple"></div>
   </div>
@@ -26,7 +26,7 @@ layout: default
 
 <section id="portfolio" class="section-padding bg-alpha">
   <div class="grid--double">
-    <h1 class="section-header">Portfolio</h1>
+    <h1 class="section-header">瞬间</h1>
     <div class="portfolio-carousel owl-carousel wow fadeIn">
       <div>
         <figure>
@@ -49,7 +49,7 @@ layout: default
 
 <section id="blog" class="section-padding bg-white">
   <div class="grid">
-    <h1 class="section-header">Blog</h1>
+    <h1 class="section-header">博客</h1>
     <ul class="container-double" itemscope itemtype="http://schema.org/Blog">
       {% for post in site.posts limit:6 %}
         <li class="preview" itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
