--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ layout: default
     <div class="container-btn">
       <a class="btn" href="/archive">
         <div>
-          <span>Read More</span>
-          <span>Read More</span>
+          <span>更多</span>
+          <span>更多</span>
         </div>
       </a>
     </div>
