--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ layout: default
   <div class="grid">
     <h1 class="section-header">关于</h1>
     <div class="about">
-      <p class="about__text wow fadeInUp" data-wow-delay="300ms">正在记录。。。。</p>
+      <p class="about__text wow fadeInUp" data-wow-delay="300ms">用爱正在记录。。。。</p>
     </div>
     <div id="instafetch" class="container-triple"></div>
   </div>
