--- a/index.html
+++ b/index.html
@@ -20,17 +20,27 @@ layout: default
     <div class="portfolio-carousel owl-carousel wow fadeIn">
       <div>
         <figure>
-          <img src="/assets/images/portfolio-1.png" alt="Portfolio Item"/>
+          <img src="/assets/images/1.jpg" alt="Portfolio Item"/>
         </figure>
       </div>
       <div>
         <figure>
-          <img src="/assets/images/portfolio-2.png" alt="Portfolio Item"/>
+          <img src="/assets/images/2.jpg" alt="Portfolio Item"/>
         </figure>
       </div>
       <div>
         <figure>
-          <img src="/assets/images/portfolio-3.png" alt="Portfolio Item"/>
+          <img src="/assets/images/3.jpg" alt="Portfolio Item"/>
+        </figure>
+      </div>
+      <div>
+        <figure>
+          <img src="/assets/images/4.jpg" alt="Portfolio Item"/>
+        </figure>
+      </div>
+      <div>
+        <figure>
+          <img src="/assets/images/5.jpg" alt="Portfolio Item"/>
         </figure>
       </div>
     </div>
