--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
     <span>记录我们的幸福</span>
   </header>
   <div class="mast__img bg-grey">
-    <div class="absolute-bg" style="background-image: url('/assets/images/a.jpg');"></div>
+    <div class="absolute-bg" style="background-image: url('http://ow2dmnlmn.bkt.clouddn.com/1.jpg');"></div>
   </div>
   <div class="mast__img bg-alpha">
     <div class="absolute-bg" style="background-image: url('/assets/images/b.jpg');"></div>
