--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <section class="mast">
   <header class="mast__header">
     <h1>Love Forever</h1>
-    <span>记录我们的幸福</span>
+    <span>用镜头和代码记录我们的幸福</span>
   </header>
   <div class="mast__img bg-grey">
     <div class="absolute-bg" style="background-image: url('http://ow2dmnlmn.bkt.clouddn.com/1.jpg');"></div>
