--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
 
 <section id="blog" class="section-padding bg-white">
   <div class="grid">
-    <h1 class="section-header">博客</h1>
+    <h1 class="section-header">记录</h1>
     <ul class="container-double" itemscope itemtype="http://schema.org/Blog">
       {% for post in site.posts limit:6 %}
         <li class="preview" itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
@@ -84,7 +84,7 @@ layout: default
   <div class="grid">
     <h1 class="section-header">关于</h1>
     <div class="about">
-      <p class="about__text wow fadeInUp" data-wow-delay="300ms">用爱正在记录。。。</p>
+      <p class="about__text wow fadeInUp" data-wow-delay="300ms">正在记录。。。</p>
     </div>
     <div id="instafetch" class="container-triple"></div>
   </div>
