--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
     <div class="absolute-bg" style="background-image: url('http://ow2dmnlmn.bkt.clouddn.com/1.jpg');"></div>
   </div>
   <div class="mast__img bg-alpha">
-    <div class="absolute-bg" style="background-image: url('/assets/images/b.jpg');"></div>
+    <div class="absolute-bg" style="background-image: url('http://ow2dmnlmn.bkt.clouddn.com/17sh5.jpg');"></div>
   </div>
 </section>
 
